# Jump-Diffusion-Engine

./: .gitignore  CHANGELOG.md  CITATION.cff  Core.py  LICENSE  README.md  engine.py  pyproject.toml
.github/workflows/: ci.yml
examples/: antifragile_memory.py  haleu_reactor.py  satellite_attitude_pointing.py
jump_diffusion_engine/: __init__.py  engine.py
jump_diffusion_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
packaging/: .gitignore  pyproject.toml  requirements.txt  setup.py
release/: CHANGELOG.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_TEMPLATE.md
tests/: test_engine.py
